--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - MONGODB_URI=mongodb://mongo:27017/aura
+      - MONGO_URI=mongodb://mongo:27017/aura
       - PORT=5000
     depends_on:
       - mongo
@@ -32,12 +32,10 @@ services:
     build:
       context: .
       dockerfile: docker/frontend.Dockerfile
-      args:
-        REACT_APP_API_BASE_URL: http://backend:5000
     container_name: frontend
     restart: always
     ports:
-      - "3000:80"
+      - "80:80"
     depends_on:
       - backend
     networks:
