fixed EC2 deploy script — replaced missing  with static ap-south-1 to resolve region errors

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -138,9 +138,9 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ubuntu
-            aws ecr get-login-password --region $AWS_REGION \
+            aws ecr get-login-password --region ap-south-1 \
               | docker login --username AWS --password-stdin \
-                ${{ steps.aws.outputs.ACCOUNT }}.dkr.ecr.$AWS_REGION.amazonaws.com
+                ${{ steps.aws.outputs.ACCOUNT }}.dkr.ecr.ap-south-1.amazonaws.com
 
             docker compose pull
             docker compose up -d
