--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -118,14 +118,14 @@ jobs:
     ###############################################
     # 11. COPY DOCKER-COMPOSE FILE INTO EC2 (SCP)
     ###############################################
-      - name: Copy docker-compose to EC2
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ steps.ec2.outputs.EC2_IP }}
-          username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
-          source: "./docker-compose.yml"
-          target: "/home/ubuntu/"
+      # - name: Copy docker-compose to EC2
+      #   uses: appleboy/scp-action@v0.1.7
+      #   with:
+          # host: ${{ steps.ec2.outputs.EC2_IP }}
+      #     username: ubuntu
+      #     key: ${{ secrets.EC2_SSH_KEY }}
+      #     source: "./docker-compose.yml"
+      #     target: "/home/ubuntu/"
 
     ###############################################
     # 12. DEPLOY ON EC2 (SSH + DOCKER COMPOSE PULL/UP)
