--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.5"
+    "mongoose": "^8.3.5",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
