--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -29,4 +29,4 @@ scrape_configs:
   - job_name: 'backend'
     metrics_path: '/metrics'
     static_configs:
-      - targets: ['backend:5000']
+      - targets: ['host.docker.internal:5000']
