--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -21,7 +21,7 @@ scrape_configs:
   # -------------------------------------
   - job_name: 'cadvisor'
     static_configs:
-      - targets: ['cadvisor:8080']
+      - targets: ['host.docker.internal:8080']
 
   # -------------------------------------
   # Scrape Backend Application Metrics
